--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Created by https://www.toptal.com/developers/gitignore/api/node,osx,windows,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,osx,windows,visualstudiocode
 
+.vscode/
 ### Node ###
 # Logs
 logs
@@ -148,7 +149,8 @@ dist
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
